fix align in mobileView

--- a/client/src/styles/CustomisedStyle.css
+++ b/client/src/styles/CustomisedStyle.css
@@ -2232,7 +2232,7 @@ button {
   color: #0b0b0b;
 }
 #deactivebtn {
-  width: 25%;
+  width: fit-content;
   border-radius: 0%;
   background-color: transparent;
   margin-top: -30px;
@@ -2421,6 +2421,14 @@ div {
   background-size: cover;
 }
 @media screen and (max-width: 420px) {
+
+  /* .close {
+    border-color: transparent;
+    /* border: transparent; */
+    /* color: #5a0909;
+    margin-left: 100px;
+    cursor: pointer;
+  }  */
   .tenant_filter {
     width: 200%;
     height: fit-content;
@@ -2494,7 +2502,7 @@ width: 100px;
     width: 250px;
   }
   .modhead {
-    right: 50px;
+    right: 30px;
   }
   .space {
     margin-bottom: 200px;
